Agrege los consejos para algunas respuestas

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,12 @@
                 <button type="button" onclick="promedio()">Enviar Respuestas</button>
             </div>
 
+             <!--Consejo-->
+             <div class="consejo">
+                
+             </div>
+
+
             
         </div>
     </form> 
