Cambio los textos en las respuestas

--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
                 <h2>Ahora sí, cuéntanos, ¿Cual es tu lenguaje del amor?</h2>
                 <div  class="fondo-mostaza">
                     <input type="radio" value="2" id="respuesta1.1" name="primeraSeleccion" >
-                    <lable for="respuesta1.1">A.Regalos</lable>
+                    <lable for="respuesta1.1">Regalos</lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input  type="radio" value="4" id="respuesta1.2" name="primeraSeleccion" >
-                    <lable  for="respuesta1.2">B.Tiempo de calidad </lable>
+                    <lable  for="respuesta1.2">Tiempo de calidad </lable>
                 </div>
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="6" id="respuesta1.3" name="primeraSeleccion" >
-                    <lable for="respuesta1.3">C.Contacto Fisico</lable>
+                    <lable for="respuesta1.3">Contacto Fisico</lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="8" id="respuesta1.4" name="primeraSeleccion" >
-                    <lable for="respuesta1.4">D.Actos de Servicio</lable>
+                    <lable for="respuesta1.4">Actos de Servicio</lable>
                 </div>
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="10" id="respuesta1.5" name="primeraSeleccion">
-                    <lable for="respuesta1.5">E.Pals de Afirmacion</lable>
+                    <lable for="respuesta1.5">Palabras de Afirmacion</lable>
                 </div>
 
 
@@ -67,28 +67,28 @@
                 
                 <div class="fondo-mostaza">
                     <input type="radio" value="2" id="respuesta2.1" name="segundaSeleccion" >
-                    <lable for="respuesta2.1" >A.Es complicado </lable>
+                    <lable for="respuesta2.1" >Es complicado </lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="4" id="respuesta2.2" name="segundaSeleccion" >    
-                    <lable for="respuesta2.2" >B.Soltero pero no disponible</lable>
+                    <lable for="respuesta2.2" >Soltero pero no disponible</lable>
                 </div>
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="6" id="respuesta2.3" name="segundaSeleccion" >
-                    <lable for="respuesta2.3">C.Me estoy quemando</lable>
+                    <lable for="respuesta2.3">Me estoy quemando</lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="8" id="respuesta2.4" name="segundaSeleccion" >
-                    <lable for="respuesta2.4">D.En una relación</lable>
+                    <lable for="respuesta2.4">En una relación</lable>
                 </div>
 
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="10" id="respuesta2.5" name="segundaSeleccion" >
-                    <lable for="respuesta2.5">E.Soltera y disponible </lable>
+                    <lable for="respuesta2.5">Soltera y disponible </lable>
                 </div>
             </div>
             <!-- Pregunta 3-->
@@ -98,22 +98,22 @@
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="2" id="respuesta3.1" name="terceraSeleccion" >
-                    <lable for="respuesta3.1">A.Soy muy celoso</lable>
+                    <lable for="respuesta3.1">Soy muy celoso</lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="4" id="respuesta3.2" name="terceraSeleccion" >
-                    <lable for="respuesta3.2">B.Huyo al amor, cuando algo va bien me da miedo y me voy</lable>
+                    <lable for="respuesta3.2">Huyo al amor, cuando algo va bien me da miedo y me voy</lable>
                 </div>
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="6" id="respuesta3.3" name="terceraSeleccion" >
-                    <lable for="respuesta3.3">C.Siento que nadie llena mis estándares </lable>
+                    <lable for="respuesta3.3">Siento que nadie llena mis estándares </lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="8" id="respuesta3.4" name="terceraSeleccion" >
-                    <lable for="respuesta3.4">D.Siento que mis lideres no me entienden</lable>
+                    <lable for="respuesta3.4">Siento que mis lideres no me entienden</lable>
                 </div>
 
             </div>
@@ -125,17 +125,17 @@
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="2" id="respuesta5.1" name="cuartaSeleccion" >
-                    <lable for="respuesta5.1">A.La búsqueda constante de emociones intensas.</lable>
+                    <lable for="respuesta5.1">La búsqueda constante de emociones intensas.</lable>
                 </div>
 
                 <div class="fondo-turquesa">
                     <input type="radio" value="4" id="respuesta5.2" name="cuartaSeleccion" >
-                    <lable for="respuesta5.2">B.La honestidad y la confianza en Dios</lable>
+                    <lable for="respuesta5.2">La honestidad y la confianza en Dios</lable>
                 </div>
 
                 <div class="fondo-mostaza">
                     <input type="radio" value="6" id="respuesta4.3" name="cuartaSeleccion" >
-                    <lable for="respuesta5.3">C.Mantener secretos para mantener la intriga</lable>
+                    <lable for="respuesta5.3">Mantener secretos para mantener la intriga</lable>
                 </div>
 
             </div>
